bot_log.txt
  File "D:\Телеграм бот МИР ТАНКОВ\bot.py", line 3164
    global ADMIN_ID
    ^^^^^^^^^^^^^^^
SyntaxError: name 'ADMIN_ID' is used prior to global declaration
